# Benelux_Algorithm_Programming_Contest_BAPC

./: .coverage  pyproject.toml
2009/: penguin_bashing.ipynb  penguin_bashing.py  test_penguin_bashing.py
2009/utils/: util.py
