[project]
name = "benelux-algorithm-programming-contest-bapc"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "test*.py"
python_functions = "test_*"
