[project]
name = "benelux-algorithm-programming-contest-bapc"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
autopep8 = "*"
ipykernel = "*"
ipython = "*"
matplotlib = "*"
memory-profiler = "*"
nbformat = "*"
networkx = "*"
numpy = "*"
pep8 = "*"
pipenv = "*"
plotly = "*"
psutil = "*"
pycodestyle = "*"
pydot = "*"
pytest = "*"
scipy = "*"
tabulate = "*"
termcolor = "*"
treelib = "*"
sortedcontainers = "*"
sympy = "*"
colorama = "*"
ipympl = "*"
more-itertools = "*"
prettyprinttree = "*"
sortedcollections = "*"
requests = "*"
